tests/misc_testsuite/threads.wast
(assert_invalid (module (memory 1 1 shared)) "Unsupported feature: shared memories")
